--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
       <!--=============== CSS ===============-->
       <link rel="stylesheet" href="assets/css/styles.css">
-      <link rel="icon" href="capture.jpg" type="image/x-icon">
+      <link rel="icon" href="assets/capture.jpg" type="image/x-icon">
 
       <title>Ricky Villaruel's Portfolio</title>
    </head>
